[gd_scene load_steps=54 format=3 uid="uid://d0ml0manfpx0i"]

[ext_resource type="Script" path="res://Assets/Scripts/Main/drinkStation.gd" id="1_82der"]
[ext_resource type="Texture2D" uid="uid://b1y4w3t24thyl" path="res://Assets/Images/temp_stripe.png" id="1_dcby5"]
[ext_resource type="Texture2D" uid="uid://00urhlnaat23" path="res://Assets/Images/temp_white.png" id="2_5ejwk"]
[ext_resource type="Texture2D" uid="uid://ctyuysku1j4fi" path="res://Assets/Sprites/background_drinkStation_temp.png" id="2_pa4x2"]
[ext_resource type="PackedScene" uid="uid://db5drtid7hj6s" path="res://Assets/Scenes/Drink Station/pfilter_bin.tscn" id="3_gm71d"]
[ext_resource type="PackedScene" uid="uid://bg00wrkak7osn" path="res://Assets/Scenes/Drink Station/espresso_machine.tscn" id="4_fm2l0"]
[ext_resource type="PackedScene" uid="uid://c6u2kinqk3pj5" path="res://Assets/Scenes/Drink Station/cup_box.tscn" id="4_u4gyy"]
[ext_resource type="PackedScene" uid="uid://do1y0ar0416g5" path="res://Assets/Scenes/Drink Station/blender.tscn" id="7_ix713"]
[ext_resource type="PackedScene" uid="uid://dd147s3gtkprx" path="res://Assets/Scenes/Drink Station/portafilter.tscn" id="7_oixdv"]
[ext_resource type="PackedScene" uid="uid://dxko44sll1xhg" path="res://Assets/Scenes/Drink Station/cups_menu.tscn" id="8_dqjb4"]
[ext_resource type="Script" path="res://Assets/Scripts/Components/visualComponent.gd" id="11_cj7ob"]
[ext_resource type="Texture2D" uid="uid://c8xiuhrqngx7e" path="res://Assets/Sprites/temp_drink_station_wall.png" id="11_osrg7"]
[ext_resource type="Texture2D" uid="uid://n1gdvwu3qvno" path="res://Assets/Sprites/temp_drink_station_counter.png" id="12_qixfj"]
[ext_resource type="PackedScene" uid="uid://b6hjopgubjos1" path="res://Assets/Scenes/Drink Station/drink.tscn" id="12_v4mwj"]
[ext_resource type="Resource" uid="uid://csnacccra06mg" path="res://Assets/Resources/Ingredients/Ingredients Mixtures/mixture_chocolate_milk.tres" id="17_hrvij"]
[ext_resource type="Resource" uid="uid://d31njdo60i1di" path="res://Assets/Resources/Ingredients/Ingredients Mixtures/mixture_dark_chocolate_milk.tres" id="18_a6kjv"]
[ext_resource type="PackedScene" uid="uid://dugs6yi15j2jj" path="res://Assets/Scenes/Drink Station/ingredient_dispenser.tscn" id="19_3cr71"]
[ext_resource type="PackedScene" uid="uid://daqrpthn200hs" path="res://Assets/Scenes/Drink Station/blender_base.tscn" id="20_bsiea"]
[ext_resource type="Resource" uid="uid://mv7jsl5u0of1" path="res://Assets/Resources/Ingredients/Ingredients/espresso_single.tres" id="24_aamff"]
[ext_resource type="PackedScene" uid="uid://gfvi342wm2b" path="res://Assets/Scenes/Drink Station/coffee_grinder.tscn" id="24_e6fhy"]
[ext_resource type="Resource" uid="uid://bg5k7dythg6pd" path="res://Assets/Resources/Ingredients/Ingredients/crispies.tres" id="24_i103l"]
[ext_resource type="Script" path="res://Assets/Scripts/Drink Station/drinkStationVisuals.gd" id="25_41edo"]
[ext_resource type="Resource" uid="uid://g7d5s6h5lyuy" path="res://Assets/Resources/Ingredients/Ingredients/milk_almond.tres" id="26_2b8ol"]
[ext_resource type="Script" path="res://Assets/Scripts/Drink Station/filterShelf.gd" id="26_2rsuw"]
[ext_resource type="PackedScene" uid="uid://dglckw1llxjwj" path="res://Assets/Scenes/Drink Station/drink_submit.tscn" id="26_3osxd"]
[ext_resource type="Script" path="res://Assets/Scripts/Components/holdInfo.gd" id="27_5p5k6"]
[ext_resource type="Script" path="res://Assets/Scripts/Components/portafilterContainerComponent.gd" id="27_bwcd2"]
[ext_resource type="Script" path="res://Assets/Scripts/Components/holdComponent.gd" id="27_tnpce"]
[ext_resource type="Texture2D" uid="uid://njvbt1bpe571" path="res://Assets/Sprites/espresso_machine_temp.png" id="29_l6wa3"]
[ext_resource type="Script" path="res://Assets/Scripts/Drink Station/espressoMachineREDO.gd" id="30_8eryd"]
[ext_resource type="Texture2D" uid="uid://cnmift010ifu4" path="res://Assets/Sprites/grinder_temp.png" id="30_okwqi"]
[ext_resource type="Script" path="res://Assets/Scripts/Drink Station/espressoMachineSlot.gd" id="31_gi4fu"]
[ext_resource type="Texture2D" uid="uid://c76thvdq272c4" path="res://Assets/Sprites/portafilter_temp.png" id="31_mnhnh"]
[ext_resource type="Texture2D" uid="uid://gnpb4q0tmab5" path="res://Assets/Sprites/portafilter_hanging_temp.png" id="32_qn622"]
[ext_resource type="Texture2D" uid="uid://b8wdg2pol43el" path="res://Assets/Sprites/mug_temp.png" id="33_bpby2"]
[ext_resource type="Script" path="res://Assets/Scripts/Drink Station/mugSelect.gd" id="35_8k4rf"]

[sub_resource type="LabelSettings" id="LabelSettings_jv6bb"]
font_size = 24
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_646ul"]
size = Vector2(125, 150)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_asyd2"]
size = Vector2(125, 150)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m65yn"]
size = Vector2(200, 75)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_soc4e"]
size = Vector2(220, 95)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_6niqh"]
size = Vector2(200, 75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jsv4l"]
size = Vector2(165.198, 214.352)

[sub_resource type="CircleShape2D" id="CircleShape2D_hl31s"]
radius = 23.1602

[sub_resource type="CircleShape2D" id="CircleShape2D_ouqtk"]
radius = 23.1602

[sub_resource type="RectangleShape2D" id="RectangleShape2D_enttt"]
size = Vector2(194.934, 211.129)

[sub_resource type="CircleShape2D" id="CircleShape2D_6s6ep"]
radius = 23.1602

[sub_resource type="CircleShape2D" id="CircleShape2D_ugd5q"]
radius = 23.1602

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rvnwg"]
size = Vector2(223, 271)

[sub_resource type="CircleShape2D" id="CircleShape2D_mg8ng"]
radius = 21.2132

[sub_resource type="CircleShape2D" id="CircleShape2D_bcq3p"]
radius = 21.2132

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y1dhc"]
size = Vector2(113, 204)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t4p4v"]
size = Vector2(396.75, 98.5)

[node name="drinkStation" type="Node2D" node_paths=PackedStringArray("ingredientContainers", "drinkStationVisuals", "holdInfo", "holdComponent")]
process_mode = 1
script = ExtResource("1_82der")
ingredientContainers = [NodePath("og/machines/blender"), NodePath("og/drink")]
drinkStationVisuals = NodePath("og/visuals")
holdInfo = NodePath("og/holdComponent/holdInfo")
holdComponent = NodePath("og/holdComponent")

[node name="bg" type="Sprite2D" parent="."]
texture = ExtResource("2_pa4x2")
centered = false
metadata/_edit_lock_ = true

[node name="og" type="Node" parent="."]

[node name="GUI" type="Control" parent="og"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2

[node name="BG" type="TextureRect" parent="og/GUI"]
self_modulate = Color(0.501961, 0.380392, 0.32549, 1)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
texture = ExtResource("1_dcby5")

[node name="wallShadow" type="TextureRect" parent="og/GUI/BG"]
self_modulate = Color(0.4, 0.270588, 0.309804, 1)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -130.0
offset_right = 960.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
texture = ExtResource("2_5ejwk")
expand_mode = 1

[node name="pfilterBin" parent="og/GUI/BG/wallShadow" instance=ExtResource("3_gm71d")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -55.0
offset_right = 240.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2

[node name="cupBox" parent="og/GUI/BG/wallShadow" node_paths=PackedStringArray("cupsMenu") instance=ExtResource("4_u4gyy")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -540.0
offset_top = -55.0
offset_right = -300.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
cupsMenu = NodePath("../../../cupsMenu")

[node name="wall" type="TextureRect" parent="og/GUI/BG"]
self_modulate = Color(0.85098, 0.576471, 0.658824, 1)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -960.0
offset_right = 960.0
offset_bottom = 500.0
grow_horizontal = 2
mouse_filter = 2
texture = ExtResource("2_5ejwk")
expand_mode = 1

[node name="counterShadow" type="TextureRect" parent="og/GUI/BG"]
self_modulate = Color(0.5, 0.435, 0.449083, 1)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -180.0
offset_right = 960.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
texture = ExtResource("2_5ejwk")
expand_mode = 1

[node name="counter" type="TextureRect" parent="og/GUI/BG"]
self_modulate = Color(0.6, 0.521569, 0.545098, 1)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -680.0
offset_right = 960.0
offset_bottom = -180.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
texture = ExtResource("2_5ejwk")
expand_mode = 1

[node name="border" type="TextureRect" parent="og/GUI/BG/counter"]
self_modulate = Color(0.490196, 0.619608, 0.509804, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -940.0
offset_top = -230.0
offset_right = 940.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_5ejwk")
expand_mode = 1

[node name="container" type="TextureRect" parent="og/GUI/BG/counter/border"]
self_modulate = Color(0.490196, 0.619608, 0.509804, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -930.0
offset_top = -220.0
offset_right = 930.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_5ejwk")
expand_mode = 1

[node name="leftMat" type="TextureRect" parent="og/GUI/BG/counter/border/container"]
self_modulate = Color(0.407843, 0.517647, 0.419608, 1)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -220.0
offset_right = 613.0
offset_bottom = 220.0
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_5ejwk")
expand_mode = 1

[node name="leftMat2" type="TextureRect" parent="og/GUI/BG/counter/border/container/leftMat"]
self_modulate = Color(0.34902, 0.215686, 0.258824, 1)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -120.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
texture = ExtResource("2_5ejwk")
expand_mode = 1

[node name="topMat" type="TextureRect" parent="og/GUI/BG/counter/border/container"]
self_modulate = Color(0.407843, 0.517647, 0.419608, 1)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -306.5
offset_right = 306.5
offset_bottom = 215.0
grow_horizontal = 2
mouse_filter = 2
texture = ExtResource("2_5ejwk")
expand_mode = 1

[node name="espressoMachine" parent="og/GUI/BG/counter/border/container/topMat" instance=ExtResource("4_fm2l0")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = -50.0
offset_right = 250.0
offset_bottom = 165.0
grow_horizontal = 2

[node name="bottomMat" type="TextureRect" parent="og/GUI/BG/counter/border/container"]
self_modulate = Color(0.407843, 0.517647, 0.419608, 1)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -306.5
offset_top = -215.0
offset_right = 306.5
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
texture = ExtResource("2_5ejwk")
expand_mode = 1

[node name="rightMat" type="TextureRect" parent="og/GUI/BG/counter/border/container"]
self_modulate = Color(0.407843, 0.517647, 0.419608, 1)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -613.0
offset_top = -220.0
offset_bottom = 220.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_5ejwk")
expand_mode = 1

[node name="tamperMat" type="TextureRect" parent="og/GUI/BG/counter/border/container/rightMat"]
self_modulate = Color(0.701961, 0.607843, 0.635294, 1)
layout_mode = 1
offset_left = 65.0
offset_top = 75.0
offset_right = 166.0
offset_bottom = 145.0
mouse_filter = 2
texture = ExtResource("2_5ejwk")
expand_mode = 1

[node name="tamperMat2" type="TextureRect" parent="og/GUI/BG/counter/border/container/rightMat/tamperMat"]
self_modulate = Color(0.85098, 0.741176, 0.772549, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_5ejwk")
expand_mode = 1

[node name="cupsMenu" parent="og/GUI" instance=ExtResource("8_dqjb4")]
layout_mode = 1

[node name="holdComponent" type="Node2D" parent="og"]
script = ExtResource("27_tnpce")

[node name="holdInfo" type="Node2D" parent="og/holdComponent" node_paths=PackedStringArray("holdComponent", "label")]
script = ExtResource("27_5p5k6")
holdComponent = NodePath("..")
labelOffset = Vector2(25, 0)
label = NodePath("label")

[node name="label" type="Label" parent="og/holdComponent/holdInfo"]
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 24
label_settings = SubResource("LabelSettings_jv6bb")

[node name="visuals" type="Node" parent="og" node_paths=PackedStringArray("drinkLocations", "portafilterLocations", "blenderLocations", "ingredientLocations")]
script = ExtResource("25_41edo")
drinkLocations = [NodePath("../drinkSubmit")]
portafilterLocations = [NodePath("../portafilters/filterShelf"), NodePath("../machines/coffeeGrinder")]
blenderLocations = [NodePath("../machines/blenderBase")]
ingredientLocations = [NodePath("../machines/blender"), NodePath("../drink")]

[node name="Wall" type="Sprite2D" parent="og/visuals"]
visible = false
texture = ExtResource("11_osrg7")
centered = false

[node name="Wall2" type="Sprite2D" parent="og/visuals"]
visible = false
position = Vector2(0, 410)
texture = ExtResource("12_qixfj")
centered = false

[node name="drinkMat" type="Node2D" parent="og/visuals" groups=["place_drinks"]]
visible = false
position = Vector2(753.75, 766.48)

[node name="sprite2d" type="Sprite2D" parent="og/visuals/drinkMat"]
self_modulate = Color(0.407843, 1, 0.568627, 1)
texture = SubResource("PlaceholderTexture2D_646ul")

[node name="area2d" type="Area2D" parent="og/visuals/drinkMat"]

[node name="collisionShape2d" type="CollisionShape2D" parent="og/visuals/drinkMat/area2d"]
shape = SubResource("RectangleShape2D_asyd2")

[node name="portafilters" type="Node" parent="og"]

[node name="filterShelf" type="Node2D" parent="og/portafilters" node_paths=PackedStringArray("filterContainer") groups=["place_portafilters"]]
visible = false
position = Vector2(700, 250)
script = ExtResource("26_2rsuw")
filterContainer = NodePath("portafilterContainerComponent")

[node name="visualComponent" type="Node2D" parent="og/portafilters/filterShelf" node_paths=PackedStringArray("glowSprite")]
script = ExtResource("11_cj7ob")
glowSprite = NodePath("../glow")

[node name="filterHome" type="Marker2D" parent="og/portafilters/filterShelf"]
position = Vector2(-70.7, -13.5)

[node name="filterHome2" type="Marker2D" parent="og/portafilters/filterShelf"]
position = Vector2(-35.05, 18.08)

[node name="filterHome3" type="Marker2D" parent="og/portafilters/filterShelf"]
position = Vector2(24.095, -16.53)

[node name="filterHome4" type="Marker2D" parent="og/portafilters/filterShelf"]
position = Vector2(66.155, 15.36)

[node name="portafilterContainerComponent" type="Area2D" parent="og/portafilters/filterShelf" node_paths=PackedStringArray("filterPositions")]
collision_layer = 4
collision_mask = 0
monitoring = false
script = ExtResource("27_bwcd2")
filterSlots = 4
filterPositions = [NodePath("../filterHome"), NodePath("../filterHome2"), NodePath("../filterHome3"), NodePath("../filterHome4")]

[node name="collisionShape2d" type="CollisionShape2D" parent="og/portafilters/filterShelf/portafilterContainerComponent"]
shape = SubResource("RectangleShape2D_m65yn")

[node name="glow" type="Sprite2D" parent="og/portafilters/filterShelf"]
visible = false
self_modulate = Color(0.364706, 0.517647, 1, 1)
texture = SubResource("PlaceholderTexture2D_soc4e")

[node name="sprite2d" type="Sprite2D" parent="og/portafilters/filterShelf"]
self_modulate = Color(0.14902, 1, 0.0313726, 1)
texture = SubResource("PlaceholderTexture2D_6niqh")

[node name="portafilter" parent="og/portafilters" node_paths=PackedStringArray("filterShelf") groups=["pickup_portafilters"] instance=ExtResource("7_oixdv")]
visible = false
top_level = true
position = Vector2(724.585, 275.12)
filterShelf = NodePath("../filterShelf")

[node name="portafilter1" parent="og/portafilters" node_paths=PackedStringArray("filterShelf") groups=["pickup_portafilters"] instance=ExtResource("7_oixdv")]
visible = false
top_level = true
position = Vector2(786.185, 239.495)
filterShelf = NodePath("../filterShelf")
ID = 1

[node name="portafilter2" parent="og/portafilters" node_paths=PackedStringArray("filterShelf") groups=["pickup_portafilters"] instance=ExtResource("7_oixdv")]
visible = false
top_level = true
position = Vector2(857.835, 259.06)
filterShelf = NodePath("../filterShelf")
isDouble = true
ID = 2

[node name="portafilter3" parent="og/portafilters" node_paths=PackedStringArray("filterShelf") groups=["pickup_portafilters"] instance=ExtResource("7_oixdv")]
visible = false
top_level = true
position = Vector2(914.435, 238.295)
filterShelf = NodePath("../filterShelf")
isDouble = true
ID = 3

[node name="dispensers" type="Node" parent="og"]

[node name="ingredientDispenser" parent="og/dispensers" node_paths=PackedStringArray("holdComponent") instance=ExtResource("19_3cr71")]
visible = false
top_level = true
position = Vector2(90, 806)
holdComponent = NodePath("../../holdComponent")
ingredientDispensedOverride = ExtResource("24_i103l")

[node name="ingredientDispenser2" parent="og/dispensers" node_paths=PackedStringArray("holdComponent") instance=ExtResource("19_3cr71")]
visible = false
top_level = true
position = Vector2(165, 806)
holdComponent = NodePath("../../holdComponent")
ingredientDispensedOverride = ExtResource("24_aamff")

[node name="ingredientDispenser3" parent="og/dispensers" node_paths=PackedStringArray("holdComponent") instance=ExtResource("19_3cr71")]
visible = false
top_level = true
position = Vector2(240, 806)
holdComponent = NodePath("../../holdComponent")
ingredientDispensedOverride = ExtResource("26_2b8ol")

[node name="machines" type="Node" parent="og"]

[node name="blenderBase" parent="og/machines" node_paths=PackedStringArray("blenderCup") instance=ExtResource("20_bsiea")]
visible = false
position = Vector2(550, 525)
blenderCup = NodePath("../blender")
offset = Vector2(0, -118.56)
mixturesList = Array[Resource("res://Assets/Scripts/Resources/ingredient.gd")]([ExtResource("17_hrvij"), ExtResource("18_a6kjv")])

[node name="blender" parent="og/machines" node_paths=PackedStringArray("blenderBase", "holdComponent") groups=["pickup_ingredients"] instance=ExtResource("7_ix713")]
visible = false
position = Vector2(550, 406)
blenderBase = NodePath("../blenderBase")
holdComponent = NodePath("../../holdComponent")

[node name="coffeeGrinder" parent="og/machines" groups=["place_portafilters"] instance=ExtResource("24_e6fhy")]
visible = false
position = Vector2(1375, 450)

[node name="drinkSubmit" parent="og" node_paths=PackedStringArray("holdComponent") groups=["place_drinks"] instance=ExtResource("26_3osxd")]
visible = false
position = Vector2(1650, 200)
holdComponent = NodePath("../holdComponent")

[node name="drink" parent="og" node_paths=PackedStringArray("holdComponent") groups=["pickup_drinks"] instance=ExtResource("12_v4mwj")]
visible = false
top_level = true
position = Vector2(750, 775)
holdComponent = NodePath("../holdComponent")

[node name="redo" type="Node" parent="."]

[node name="machines" type="Node" parent="redo"]

[node name="espressoMachine" type="Sprite2D" parent="redo/machines" node_paths=PackedStringArray("slot1", "slot2")]
position = Vector2(1327, 478)
scale = Vector2(0.908, 0.814667)
texture = ExtResource("29_l6wa3")
script = ExtResource("30_8eryd")
slot1 = NodePath("slot1")
slot2 = NodePath("slot2")
metadata/_edit_lock_ = true

[node name="slot1" type="Area2D" parent="redo/machines/espressoMachine" node_paths=PackedStringArray("portafilterMarker", "mugMarker")]
script = ExtResource("31_gi4fu")
slotNumber = 1
portafilterMarker = NodePath("filter")
mugMarker = NodePath("mug")

[node name="area" type="CollisionShape2D" parent="redo/machines/espressoMachine/slot1"]
position = Vector2(-77.0925, 56.4648)
shape = SubResource("RectangleShape2D_jsv4l")

[node name="single" type="CollisionShape2D" parent="redo/machines/espressoMachine/slot1"]
position = Vector2(-143.172, -77.3322)
shape = SubResource("CircleShape2D_hl31s")

[node name="double" type="CollisionShape2D" parent="redo/machines/espressoMachine/slot1"]
position = Vector2(-81.4978, -79.7872)
shape = SubResource("CircleShape2D_ouqtk")

[node name="filter" type="Marker2D" parent="redo/machines/espressoMachine/slot1"]
position = Vector2(-95.8149, -13.5024)

[node name="mug" type="Marker2D" parent="redo/machines/espressoMachine/slot1"]
position = Vector2(-92.5111, 110.475)

[node name="slot2" type="Area2D" parent="redo/machines/espressoMachine" node_paths=PackedStringArray("portafilterMarker", "mugMarker")]
script = ExtResource("31_gi4fu")
slotNumber = 2
portafilterMarker = NodePath("filter")
mugMarker = NodePath("mug")

[node name="area" type="CollisionShape2D" parent="redo/machines/espressoMachine/slot2"]
position = Vector2(105.176, 51.5548)
shape = SubResource("RectangleShape2D_enttt")

[node name="single" type="CollisionShape2D" parent="redo/machines/espressoMachine/slot2"]
position = Vector2(61.674, -85.9246)
shape = SubResource("CircleShape2D_6s6ep")

[node name="double" type="CollisionShape2D" parent="redo/machines/espressoMachine/slot2"]
position = Vector2(115.639, -90.8347)
shape = SubResource("CircleShape2D_ugd5q")

[node name="filter" type="Marker2D" parent="redo/machines/espressoMachine/slot2"]
position = Vector2(100.22, -27.0049)

[node name="mug" type="Marker2D" parent="redo/machines/espressoMachine/slot2"]
position = Vector2(105.727, 100.655)

[node name="grinder" type="Sprite2D" parent="redo/machines"]
position = Vector2(770, 404)
texture = ExtResource("30_okwqi")
metadata/_edit_lock_ = true

[node name="slot" type="Area2D" parent="redo/machines/grinder"]

[node name="area" type="CollisionShape2D" parent="redo/machines/grinder/slot"]
position = Vector2(-3.5, 81.5)
shape = SubResource("RectangleShape2D_rvnwg")
debug_color = Color(0.317647, 0.611765, 0.403922, 0.192157)

[node name="single" type="CollisionShape2D" parent="redo/machines/grinder/slot"]
position = Vector2(-48, 58)
shape = SubResource("CircleShape2D_mg8ng")

[node name="double" type="CollisionShape2D" parent="redo/machines/grinder/slot"]
position = Vector2(26, 56)
shape = SubResource("CircleShape2D_bcq3p")

[node name="portafilters" type="Node" parent="redo"]

[node name="portafilterSelect" type="Area2D" parent="redo/portafilters"]

[node name="collisionShape2d" type="CollisionShape2D" parent="redo/portafilters/portafilterSelect"]
position = Vector2(457.5, 276)
shape = SubResource("RectangleShape2D_y1dhc")

[node name="portafilter" type="Sprite2D" parent="redo/portafilters"]
visible = false
position = Vector2(454, 467)
scale = Vector2(1.39231, 1.68333)
texture = ExtResource("31_mnhnh")

[node name="portafilterHanging" type="Sprite2D" parent="redo/portafilters"]
position = Vector2(453, 277)
scale = Vector2(1.51538, 1.51538)
texture = ExtResource("32_qn622")

[node name="mugs" type="Node" parent="redo"]

[node name="mugSelect" type="Area2D" parent="redo/mugs"]
script = ExtResource("35_8k4rf")

[node name="collisionShape2d" type="CollisionShape2D" parent="redo/mugs/mugSelect"]
position = Vector2(1310, 333)
shape = SubResource("RectangleShape2D_t4p4v")

[node name="mug" type="Sprite2D" parent="redo/mugs"]
position = Vector2(1228, 341)
scale = Vector2(0.574138, 0.574138)
texture = ExtResource("33_bpby2")

[node name="mug2" type="Sprite2D" parent="redo/mugs"]
position = Vector2(1350.63, 334.563)
scale = Vector2(0.559483, 0.559483)
texture = ExtResource("33_bpby2")

[connection signal="itemDropped" from="og/holdComponent" to="." method="_on_hold_component_item_dropped"]
[connection signal="itemPickedUp" from="og/holdComponent" to="." method="_on_hold_component_item_picked_up"]
[connection signal="input_event" from="redo/machines/espressoMachine/slot1" to="redo/machines/espressoMachine" method="_on_slot_1_input_event"]
[connection signal="input_event" from="redo/machines/espressoMachine/slot2" to="redo/machines/espressoMachine" method="_on_slot_2_input_event"]
[connection signal="input_event" from="redo/mugs/mugSelect" to="redo/mugs/mugSelect" method="_on_input_event"]
